# swift-certificates

./: .gitignore  .licenseignore  .spi.yml  .swift-format  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  NOTICE.txt  Package.swift  README.md  SECURITY.md  rsakey.pem
.github/workflows/: main.yml  pull_request.yml  scheduled.yml
Benchmarks/: Package.swift
IntegrationTests/: plugin_echo.sh  plugin_junit_xml.sh  run-single-test.sh  run-tests.sh  test_functions.sh
IntegrationTests/tests_01_allocation_counters/: defines.sh  test_01_allocation_counts.sh
Sources/: CMakeLists.txt
Sources/PerformanceTests/: ParseWebPKIRoots.swift  shared.swift
Sources/SwiftASN1/: ASN1.swift  CMakeLists.txt  Errors.swift
Sources/SwiftASN1/Basic ASN1 Types/: ASN1Any.swift  ASN1BitString.swift  ASN1Boolean.swift  ASN1Identifier.swift  ASN1Integer.swift  ASN1Null.swift  ASN1OctetString.swift  ASN1Strings.swift  ArraySliceBigint.swift  GeneralizedTime.swift  ObjectIdentifier.swift  PEMDocument.swift  TimeUtilities.swift  UTCTime.swift
Sources/SwiftASN1/Docs.docc/: DecodingASN1.md  PEM.md  index.md
Sources/X509/: CMakeLists.txt  Certificate.swift  CertificatePrivateKey.swift  CertificatePrivateKeyProtocol.swift  CertificatePublicKey.swift  CertificateSerialNumber.swift  CertificateSigner.swift  CertificateVersion.swift  Curve25519+DER.swift  CustomPrivateKey.swift  Digests.swift  DistinguishedName.swift  Error.swift  Extension.swift  Extensions.swift  ExtensionsBuilder.swift  GeneralName.swift  Lock.swift  LockedValueBox.swift  PKCS8PrivateKey.swift  PromiseAndFuture.swift  RDNAttribute.swift  RandomNumberGenerator+bytes.swift  RelativeDistinguishedName.swift  SEC1PrivateKey.swift  SecKeyWrapper.swift  Signature.swift  SignatureAlgorithm.swift  TinayArray.swift  TinyArray.swift  X509SendableMetatype.swift
Sources/X509/CRL/: CRLCache.swift  CRLFetcher.swift  CRLPolicy.swift  CertificateRevocationList.swift
Sources/X509/CSR/: CSRAttribute.swift  CSRAttributes.swift  CSRVersion.swift  CertificateSigningRequest.swift  CertificationRequestInfo.swift  ExtensionRequest.swift
Sources/X509/CryptographicMessageSyntax/: CMSAttribute.swift  CMSAuthenticatedData.swift  CMSContentInfo.swift  CMSDigestedData.swift  CMSEncapsulatedContentInfo.swift  CMSEnvelopedData.swift  CMSIssuerAndSerialNumber.swift  CMSOperations.swift  CMSSignature.swift  CMSSignedData.swift  CMSSignerIdentifier.swift  CMSSignerInfo.swift  CMSVersion.swift
Sources/X509/DistinguishedNameBuilder/: CommonName.swift  CountryName.swift  DNBuilder.swift  DomainComponent.swift  EmailAddress.swift  LocalityName.swift  OrganizationName.swift  OrganizationalUnitName.swift  StateOrProvinceName.swift  StreetAddress.swift
Sources/X509/Docs.docc/: Creating Certificates.md  Examining Certificates.md  index.md
Sources/X509/Extension Types/: AuthorityInformationAccess.swift  AuthorityKeyIdentifier.swift  BasicConstraints.swift  CRLDistributionPoints.swift  ExtendedKeyUsage.swift  ExtensionIdentifiers.swift  KeyUsage.swift  NameConstraints.swift  SubjectAlternativeName.swift  SubjectKeyIdentifier.swift
Sources/X509/OCSP/: BasicOCSPResponse.swift  DirectoryString.swift  OCSPCertID.swift  OCSPCertStatus.swift  OCSPExtensionID.swift  OCSPNonce.swift  OCSPPolicy.swift  OCSPRequest.swift  OCSPResponse.swift  OCSPResponseBytes.swift  OCSPResponseData.swift  OCSPResponseStatus.swift  OCSPSignature.swift  OCSPSingleRequest.swift  OCSPSingleResponse.swift  OCSPTBSRequest.swift  OCSPVersion.swift
Sources/X509/Verifier/: AllOfPolicies.swift  AnyPolicy.swift  CertificateStore.swift  CustomCertificateStore.swift  OneOfPolicies.swift  OneOfPolicyBuilder.swift  PolicyBuilder.swift  ServerIdentityPolicy.swift  TrustRootLoading.swift  UnverifiedChain.swift  ValidatedCertificateChain.swift  ValidatedCertificatedChain.swift  VerificationDiagnostic.swift  Verifier.swift  VerifierPolicy.swift
Sources/X509/Verifier/RFC5280/: BasicConstraintsPolicy.swift  DNSNames.swift  DirectoryNames.swift  ExpiryPolicy.swift  IPConstraints.swift  NameConstraintsPolicy.swift  RFC5280Policy.swift  URIConstraints.swift  VersionPolicy.swift
Sources/X509/X509BaseTypes/: AlgorithmIdentifier.swift  ECDSASignature.swift  RSAPKCS1PublicKey.swift  SubjectPublicKeyInfo.swift  TBSCertificate.swift  Time.swift  TimeCalculations.swift  Validity.swift
Sources/_CertificateInternals/: CMakeLists.txt  _TinyArray.swift  _TinyArray1.swift  _TinyArray2.swift
Sources/_WebPKI/: WebPKI.swift
Sources/_WebPKI/roots/: individual-eg.crt  individual-en.crt  individual-eo.crt  individual-ex.crt  individual-ey.crt  individual-fb.crt  individual-fc.crt
Tests/CertificateInternalsTests/: TinyArray1Tests.swift  TinyArray2Tests.swift  TinyArrayTests.swift
Tests/X509Tests/: CMSAuthenticatedDataTests.swift  CMSContentInfoTests.swift  CMSDigestedDataTests.swift  CMSEncryptedDataTests.swift  CMSEnvelopedDataTests.swift  CMSSignerInfoUnsignedAttributesRoundTripTest.swift  CMSTests.swift  CSRTests.swift  CertificateDERTests.swift  CertificateStore.swift  CertificateTests.swift  CustomPrivateKeyTests.swift  DNSNamesTests.swift  DigestsTests.swift  DistinguishedNameBuilderTests.swift  DistinguishedNameTests.swift  ExtendedKeyUsageTests.swift  ExtensionBuilderTests.swift  IPAddressTests.swift  NameConstraintsTests.swift  OCSPPolicyVerifierTests.swift  OCSPTests.swift  PEMTestRSACertificate.pem  PEMTests.swift  PolicyBuilderTests.swift  RFC5280PolicyTests.swift  Roots.swift  SecKeyWrapperTests.swift  ServerIdentityPolicyTests.swift  TimeTests.swift  (+3 more)
benchmarks/: .gitignore  Package.swift
dev/: alloc-limits-from-test-output  update-alloc-limits-to-last-completed-ci-build  update-benchmark-thresholds
docker/: Dockerfile  docker-compose.2204.510.yaml  docker-compose.2204.57.yaml  docker-compose.2204.58.yaml  docker-compose.2204.59.yaml  docker-compose.2204.main.yaml  docker-compose.yaml
scripts/: check-cmake-filelist.sh  check-cmake-lists.sh  check_no_api_breakages.sh  generate_contributors_list.sh  integration_tests.sh  run-swift-format.sh  soundness.sh  update-cmake-lists.sh  update_cmakelists.sh
(+129 files in other folders)
